syntax = "proto3";

package proto.plugin_config.plugin_config;

option go_package = "github.com/tel4vn/fins-microservices/gen/proto/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message PluginConfigBodyRequest {
    string plugin_name = 1;
    string plugin_type = 2;
    bool status = 3;
}

message PluginConfigRequest {
    int32 limit = 1;
    int32 offset = 2;
    repeated string plugin_name = 3;
    repeated string plugin_type = 4;
    string status = 5;
}

message PluginConfigResponse {
    string code = 1;
    string message = 2;
    repeated google.protobuf.Struct data = 3;
    int32 total = 4;
}

service PluginConfig {
    rpc PostPluginConfig (PluginConfigBodyRequest) returns (PluginConfigResponse) {
        option (google.api.http) = {
            post: "/bss/v1/plugin-config",
            body: "*"
        };
        
    }
    rpc GetPluginConfigs (PluginConfigRequest) returns (PluginConfigResponse) {
        option (google.api.http) = {
            get : "/bss/v1/plugin-config"
        };
    }
}